修复一些链接错误；隐私协议补充 tikdown application

--- a/terms_of_service/index.html
+++ b/terms_of_service/index.html
@@ -10,7 +10,7 @@
           content="Tikdown - Terms Of Service Last Updated: 2024-07-31  IntroductionThe Tikdown application (hereinafter referred to as “we”) is committed to providing users with services for downloading and saving vide">
     <meta property="og:type" content="article">
     <meta property="og:title" content="Tikdown - Terms Of Service">
-    <meta property="og:url" content="https://fucmoneyapp.github.io/tikdown/terms_of_service/">
+    <meta property="og:url" content="https://fucmoney.github.io/tikdown/terms_of_service/">
     <meta property="og:site_name" content="Tikdown">
     <meta property="og:description"
           content="Tikdown - Terms Of Service Last Updated: 2024-07-31  IntroductionThe Tikdown application (hereinafter referred to as “we”) is committed to providing users with services for downloading and saving vide">
