--- a/404.html
+++ b/404.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5" />
     <meta property="og:type" content="website">
 <meta property="og:title" content="Tikdown">
-<meta property="og:url" content="https://tikdownapp.github.io/404.html">
+<meta property="og:url" content="https://fucmoney.github.io/404.html">
 <meta property="og:site_name" content="Tikdown">
 <meta property="og:locale" content="en_US">
 <meta property="article:author" content="tikdown.developer@gmail.com">
